--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             }
 
             .hero-image {
-                background-image: url("test.jpg");
+                background-image: url("images/styled_img.jpg");
                 background-color: rgb(0, 0, 0);
 
-                height: 50%;
+                height: 93%;
 
                 background-position: center;
                 background-repeat: no-repeat;
@@ -33,7 +33,7 @@
             .hero-text {
                 text-align: center;
                 position: absolute;
-                top: 50%;
+                top: 57%;
                 left: 50%;
                 transform: translate(-50%, -50%);
                 color: white;
