--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 background-image: url("images/styled_img.jpg");
                 background-color: rgb(0, 0, 0);
 
-                height: 93%;
+                height: 100%;
 
                 background-position: center;
                 background-repeat: no-repeat;
@@ -53,10 +53,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">HOME</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">Projects</a></li>
                     </ul>
                 </div>
             </div>
@@ -70,6 +68,7 @@
         </div>
 
         <div class="container-fluid">
+
         </div>
         <!-- Bootstrap Javascript -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
