--- a/index.html
+++ b/index.html
@@ -1,78 +1,37 @@
 <!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <!-- Required Meta Tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <title>Mike Whitney</title>
+<html>
+	<head>
+		<title>Mike Whitney</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <style>
-            .navbar {
-                margin-bottom: 0;
-                border-radius: 0;
-            }
+		<!-- Boot strap Dependencies -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-            body, html {
-                height: 100%;
-            }
+		<!-- My Style -->
+		<link rel="stylesheet" href="/css/style.css">
 
-            .hero-image {
-                background-image: url("images/styled_img.jpg");
-                background-color: rgb(0, 0, 0);
+		<!-- My Script -->
+		<script src="/js/script.js"></script>
+	</head>
+	<body style="background-image: url('/assets/images/bridge.jpg');">
 
-                height: 100%;
+		<div id="topbar"></div>
+		<div class="container">
 
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-                position: relative;
-            }
-
-            .hero-text {
-                text-align: center;
-                position: absolute;
-                top: 57%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                color: white;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Portfolio</a>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">Projects</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>Mike Whitney</h1>
-                <a href="Resume.pdf" target="_blank"><button type="button" class="btn btn-default">Download Resume</button></a>
-            </div>
-        </div>
-
-        <div class="container-fluid">
-
-        </div>
-        <!-- Bootstrap Javascript -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </body>
+			<div class="row">
+				<div class="col-12 title-container">
+					<img class="title-img rounded-circle" src="/assets/images/portrait.jpg" alt="project image"/>
+					<div class="project-body text-white">
+						<h2 class="project-title text-bold">Mike Whitney</h2>
+						<p class="project-description">My name is Mike Whitney and I am currently pursuing a PhD in Computer Science, focusing on computer vision, at Brigham Young University.</p>
+						<a href="/assets/documents/resume.pdf" class="btn btn-primary" target="_blank">Resume</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
