--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -17,7 +17,7 @@
 		<!-- My Script -->
 		<script src="/js/script.js"></script>
 	</head>
-	<body style="background-image: url('/assets/images/bridge.jpg');">
+	<body style="background-image:url('/assets/images/bridge.jpg')">
 		<div id="topbar"></div>
 		<div class="container">
 
@@ -39,11 +39,13 @@
 					<iframe class="project-img d-none d-lg-block" width="560" height="315" src="https://www.youtube.com/embed/ilhT-eGKunw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="project-body">
 						<h5 class="project-title">Face Detection Breakout</h5>
-						<p class="project-description">I implemented <a href="https://en.wikipedia.org/wiki/Breakout_(video_game)">Atari's breakout</a> but instead of using the mouse or any buttons for control, I used face detection.  I implemented this entire project using <a href="https://opencv.org">OpenCV</a> in C++.</p>
+						<p class="project-description">I implemented <a href="https://en.wikipedia.org/wiki/Breakout_(video_game)">Atari's breakout</a> but instead of using the mouse or any buttons for control, I used face detection.  I implemented this entire project using <a href="https://opencv.org">OpenCV</a> in C++.  Source code can be found <a href="https://github.com/mikeswhitney33/FaceDetectionBreakout">here</a>. </p>
 						<a href="#" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
 					</div>
 				</div>
 			</div>
+
+
 		</div>
 
 	</body>
