--- a/pages/shared/navbar.html
+++ b/pages/shared/navbar.html
@@ -1,4 +1,4 @@
-<nav class="topbar navbar navbar-expand-lg navbar-light bg-light">
+<nav class="topbar fixed-top navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container">
 		<a class="navbar-brand" href="/">
 			HOME
