--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -25,7 +25,7 @@
 				<div class="col-12 project-container">
 					<iframe class="project-img d-none d-lg-block" width="560" height="315" src="https://www.youtube-nocookie.com/embed/-h7HnYc4RZQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="project-body">
-						<h5 class="project-title">Multi Person Non Contact Heart Rate Tracking</h5>
+						<h5 class="project-title">Multi-Person Non Contact Heart Rate Tracking</h5>
 						<p class="project-description">
 							We implemented a method for detecting heart rates given an input video of one or more faces using a basic web camera for our advanced computer vision class.  This method utilizes <a href='http://people.csail.mit.edu/mrub/vidmag/'> Eulerian video magnification</a>, <a href="https://ieeexplore.ieee.org/document/8360091">multiscale variable-weight Savitzky-Golay combination</a>, and <a href="https://github.com/ageitgey/face_recognition">facial detection and recognition</a>.  Our method is robust to motion and is accurate within ~6 BPM.  Our application was programmed using a cross platform library called <a href="https://kivy.org/#home">Kivy</a> in Python.  This project was done in collaboration with <a href="https://andrewnc.github.io/index.html">Andrew Carr</a>.
 						</p>
@@ -36,11 +36,30 @@
 
 			<div class="row">
 				<div class="col-12 project-container">
-					<iframe class="project-img d-none d-lg-block" width="560" height="315" src="https://www.youtube.com/embed/-tglm5wg6ig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe class="project-img d-none d-lg-block" width="560" height="315" src="https://www.youtube-nocookie.com/embed/-tglm5wg6ig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="project-body">
 						<h5 class="project-title">Face Detection Breakout</h5>
 						<p class="project-description">I implemented <a href="https://en.wikipedia.org/wiki/Breakout_(video_game)">Atari's breakout</a> but instead of using the mouse or any buttons for control, I used face detection.  I implemented this entire project using <a href="https://opencv.org">OpenCV</a> in C++.  Source code can be found <a href="https://github.com/mikeswhitney33/FaceDetectionBreakout">here</a>. </p>
-						<a href="#" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
+						<a href="https://youtu.be/-tglm5wg6ig" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 project-container">
+
+					<div class="d-none d-lg-block">
+						<img class="project-img" width="560" height="315" src="/assets/images/mountains.png">
+						<a href="/projects/mountains"><div class="click-to-see"></div></a>
+					</div>
+
+					<div class="project-body">
+						<h5 class="project-title">Diamond-Square</h5>
+						<p class="project-description">I implemented the <a href="https://en.wikipedia.org/wiki/Diamond-square_algorithm">diamond-square</a> algorithm used for generating randomized fractal heatmaps.  This creates the visual of a proceedurally generated landscape in 3D.  The implementation was done using <a href="https://www.khronos.org/webgl/">webgl</a> in javascript.  A demo is available by clicking on
+							<span class="d-none d-lg-block">the image to the left.</span>
+							<span class="d-lg-none">the demo button below.</span>
+						</p>
+						<a href="/projects/mountains" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
 					</div>
 				</div>
 			</div>
