added tic tac toe

--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -78,11 +78,30 @@
 							<span class="d-none d-lg-inline">the image to the left.</span>
 							<span class="d-inline d-lg-none">the demo button below.</span>
 						</p>
-						<a href="/projects/mountains" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
+						<a href="/projects/fluid2d" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
 					</div>
 				</div>
 			</div>
 
+
+			<div class="row">
+				<div class="col-12 project-container">
+
+					<div class="d-none d-lg-block">
+						<img class="project-img" width="560" height="315" src="/assets/images/tictactoe.png">
+						<a href="/projects/tic-tac-toe"><div class="click-to-see"></div></a>
+					</div>
+
+					<div class="project-body">
+						<h5 class="project-title">Tic Tac Toe</h5>
+						<p class="project-description">I implemented a simple game of <a href="https://en.wikipedia.org/wiki/Tic-tac-toe" target=_blank>Tic-Tac-Toe</a>.  I did this using HTML5's canvas and javascript.  To play the game, click
+							<span class="d-none d-lg-inline">the image to the left.</span>
+							<span class="d-inline d-lg-none">the demo button below.</span>
+						</p>
+						<a href="/projects/tic-tac-toe" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
+					</div>
+				</div>
+			</div>
 
 		</div>
 
