--- a/projects/mountains/index.html
+++ b/projects/mountains/index.html
@@ -18,10 +18,10 @@
 		<!-- My Script -->
 		<script src="/js/script.js"></script>
 	</head>
-	<body style="background-image:url('/assets/images/bridge.jpg')">
+	<body style="background-image:url('/assets/images/bridge.jpg');">
 		<div id="topbar"></div>
 		<div class="container">
-			<div class="canvas-section">
+			<div>
 				<h1 class="text-white">Mountains</h1>
 				<canvas id="glCanvas" width="640" height="360"></canvas>
 			</div>
