--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -83,6 +83,25 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-12 project-container">
+
+					<div class="d-none d-lg-block">
+						<img class="project-img" width="560" height="315" src="/assets/images/othello.png">
+						<a href="/projects/othello"><div class="click-to-see"></div></a>
+					</div>
+
+					<div class="project-body">
+						<h5 class="project-title">Othello/Reversi</h5>
+						<p class="project-description">I implemented a simple game of <a href="https://en.wikipedia.org/wiki/Reversi" target=_blank>Othello/Reversi</a>.  I did this using HTML5's canvas and javascript.  I also added the capability to either play against another human or against an AI.  I also implemented a mechanism to display the possible moves available to a human player.  To play the game, click
+							<span class="d-none d-lg-inline">the image to the left.</span>
+							<span class="d-inline d-lg-none">the demo button below.</span>
+						</p>
+						<a href="/projects/othello" class="btn btn-primary d-lg-none" target="_blank">Demo</a>
+					</div>
+				</div>
+			</div>
+
 
 			<div class="row">
 				<div class="col-12 project-container">
@@ -94,7 +113,7 @@
 
 					<div class="project-body">
 						<h5 class="project-title">Tic Tac Toe</h5>
-						<p class="project-description">I implemented a simple game of <a href="https://en.wikipedia.org/wiki/Tic-tac-toe" target=_blank>Tic-Tac-Toe</a>.  I did this using HTML5's canvas and javascript.  To play the game, click
+						<p class="project-description">I implemented a simple game of <a href="https://en.wikipedia.org/wiki/Tic-tac-toe" target=_blank>Tic-Tac-Toe</a>.  I did this using HTML5's canvas and javascript.  I also added the ability to play against random AI players.  To play the game, click
 							<span class="d-none d-lg-inline">the image to the left.</span>
 							<span class="d-inline d-lg-none">the demo button below.</span>
 						</p>
