--- a/projects/othello/index.html
+++ b/projects/othello/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Tic Tac Toe</title>
+		<title>Othello</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,32 +13,33 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 		<link rel="stylesheet" href="/css/style.css">
-		<link rel="stylesheet" href="/projects/tic-tac-toe/style.css">
+		<link rel="stylesheet" href="/projects/othello/style.css">
 	</head>
 	<body style="background-image:url('/assets/images/bridge.jpg');">
 		<div id="topbar"></div>
 		<div class="container">
-			<div class="float-left col-sm-12 col-md-6 col-lg-6 p-0">
-				<h1 class="text-white">Tic Tac Toe: <span display="inline-block" id="currentPlayer"></span></h1>
+			<div class="float-left col-sm-12 col-md-6 col-lg-6 p-5">
+				<h1 class="text-white">Othello: <span id="playerid" class="circle black"></span> <span id="winner"></span></h1>
 				<canvas class="w-100" id="board" width=512 height=512></canvas>
-			</div>
 
+			</div>
 			<div class="float-left col-sm-12 col-md-6 col-lg-6 p-5">
 				<h1 class="text-white">Settings</h1>
-				<label class="bg-white p-1" for="player1-select">X</label>
+				<label class="circle white ty-12" for="player1-select"></label>
 				<select name="player1-select" id="player1-select">
 					<option value="human">Human</option>
 					<option value="random">Random AI</option>
 				</select>
-				<label class="bg-white p-1" for="player2-select">O</label>
+				<label class="circle black ty-12" for="player2-select"></label>
 				<select name="player2-select" id="player2-select">
 					<option value="human">Human</option>
 					<option value="random">Random AI</option>
 				</select>
 				<button class="btn btn-primary d-block" id="reset-btn">Reset</button>
 			</div>
+
 		</div>
 	</body>
 	<script src="/js/script.js"></script>
-	<script src="/projects/tic-tac-toe/tictactoe.js" type="text/javascript"></script>
+	<script src="/projects/othello/othello.js" type="text/javascript"></script>
 </html>
