--- a/projects/mountains/index.html
+++ b/projects/mountains/index.html
@@ -21,11 +21,11 @@
 	<body style="background-image:url('/assets/images/bridge.jpg');">
 		<div id="topbar"></div>
 		<div class="container">
-			<div>
+			<div class="float-left col-sm-12 col-md-6 col-lg-6">
 				<h1 class="text-white">Mountains</h1>
 				<canvas id="glCanvas" width="640" height="360"></canvas>
 			</div>
-			<div class="settings-section">
+			<div class="float-left col-sm-12 col-md-6 col-lg-6">
 				<h1 class="text-white">Settings</h1>
 				<table class="settings-table">
 					<tr>
@@ -62,7 +62,7 @@
 						<td class="settings-entry"><input type="range" min=0.0 max=6.0 value=1.5 step=0.1 class="settings-slider" id=RangeSlider name=RangeSlider></td>
 					</tr>
 					<tr>
-						<td class="settings-entry"><div class="settings-btn" id="reRenderBtn" value="Re-Render">Re-Render</div></td>
+						<td class="settings-entry"><button class="btn btn-primary" id="reRenderBtn" value="Re-Render">Re-Render</button></td>
 						<td class="settings-entry"></td>
 					</tr>
 				</table>
