--- a/projects/mountains/index.html
+++ b/projects/mountains/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Mountains</title>
-		<link rel="stylesheet" href="/projects/mountains/style.css"/>
+		<link rel="stylesheet" href="/css/mountain.css"/>
 
 				<!-- Boot strap Dependencies -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -69,8 +69,8 @@
 			</div>
 		</div>
 	</body>
-	<script type="text/javascript" src="/projects/mountains/shaders.js"></script>
-	<script type="text/javascript" src="/projects/gl-helpers.js"></script>
-	<script type="text/javascript" src="/projects/gl-matrix.js"></script>
-	<script type="text/javascript" src="/projects/mountains/mountain.js"></script>
+	<script type="text/javascript" src="/js/mountain/shaders.js"></script>
+	<script type="text/javascript" src="/js/gl-helpers.js"></script>
+	<script type="text/javascript" src="/js/gl-matrix.js"></script>
+	<script type="text/javascript" src="/js/mountain/mountain.js"></script>
 </html>
