--- a/shared/navbar.html
+++ b/shared/navbar.html
@@ -10,14 +10,11 @@
 		<div class="collapse navbar-collapse" id="navoptions">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="/pages/portfolio">Portfolio</a>
+					<a class="nav-link" href="/projects">Projects</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/assets/documents/resume.pdf" target="_blank">Resume</a>
 				</li>
-		<!-- 		<li class="nav-item">
-					<a class="nav-link" href="/pages/contact">Contact</a>
-				</li> -->
 			</ul>
 		</div>
 	</div>
