--- a/projects/board-game/index.html
+++ b/projects/board-game/index.html
@@ -51,6 +51,7 @@
     <script src="/js/board-game/game.js"></script>
     <script src="/js/board-game/tictactoe.js"></script>
     <script src="/js/board-game/othello.js"></script>
-    <script src="/js/board-game/player.js"></script>
+	<script src="/js/board-game/player.js"></script>
+	<script src="/js/board-game/minimax.js"></script>
     <script src="/js/board-game/main.js"></script>
 </html>
