added resume as a webpage

--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body style="background-image:url('/assets/images/bridge.jpg')">
 		<div id="topbar"></div>
-		<div class="container">
+		<div class="content-wrapper container">
 
 			<div class="row">
 				<div class="col-12 project-container">
