--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
 	<body style="background-image: url('/assets/images/bridge.jpg');">
 
 		<div id="topbar"></div>
-		<div class="container">
+		<div class="content-wrapper container">
 
 			<div class="row">
-				<div class="col-12 title-container">
-					<img class="title-img rounded-circle" src="/assets/images/portrait.jpg" alt="project image"/>
-					<div class="project-body text-white">
-						<h2 class="project-title text-bold">Mike Whitney</h2>
-						<p class="project-description">My name is Mike Whitney and I am currently pursuing a PhD in Computer Science, focusing on computer vision, at Brigham Young University.</p>
-						<a href="/assets/documents/resume.pdf" class="btn btn-primary" target="_blank">Resume</a>
-					</div>
+				<div class="col-12 title-container bg-dark p-3 mt-5">
+                    <div class="row">
+                        <div class="col-3">
+                            <img class="title-img rounded-circle" src="/assets/images/portrait.jpg" alt="project image" />
+                        </div>
+                        <div class="col-9">
+                            <div class="project-body text-white">
+                                <h2 class="project-title text-bold">Mike Whitney</h2>
+                                <p class="project-description">My name is Mike Whitney and I am currently pursuing a PhD in Computer Science,
+                                    focusing on computer vision, at Brigham Young University.</p>
+                                <a href="/resume" class="btn btn-primary">Resume</a>
+                            </div>
+                        </div>
+                    </div>
 				</div>
 			</div>
 		</div>
