--- a/projects/board-game/index.html
+++ b/projects/board-game/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body style="background-image:url('/assets/images/bridge.jpg');">
 		<div id="topbar"></div>
-		<div class="container">
+		<div class="content-wrapper container">
 			<div class="row">
 				<div class="mycol col-xs-12 col-sm-12 col-md-12 col-lg-6">
 					<div class="wrap">
