--- a/projects/mountains/index.html
+++ b/projects/mountains/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body style="background-image:url('/assets/images/bridge.jpg');">
 		<div id="topbar"></div>
-		<div class="container">
+		<div class="content-wrapper container">
 			<div class="float-left col-sm-12 col-md-6 col-lg-6">
 				<h1 class="text-white">Mountains</h1>
 				<canvas id="glCanvas" width="640" height="360"></canvas>
