--- a/shared/navbar.html
+++ b/shared/navbar.html
@@ -13,7 +13,7 @@
 					<a class="nav-link" href="/projects">Projects</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/assets/documents/resume.pdf" target="_blank">Resume</a>
+					<a class="nav-link" href="/resume">Resume</a>
 				</li>
 			</ul>
 		</div>
